Compute XA recovery nodes from node identifier by default